Fixed alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,7 +70,7 @@ body
 
 #title
 {
-    margin-top: 28vh;
+    margin-top: 29vh;
     margin-bottom: 10%;
     font-weight: bold; 
     letter-spacing: 1px;
